"Bazel dependencies"

module(
    name = "alexeagle_rules_pkg",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "aspect_bazel_lib", version = "2.7.0")
bazel_dep(name = "bazel_skylib", version = "1.4.1")

bazel_dep(name = "buildifier_prebuilt", version = "6.1.2", dev_dependency = True)
