load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    glob(["*.bzl"]),
    visibility = [
        "//docs:__pkg__",
    ],
)

bzl_library(
    name = "tar",
    srcs = ["tar.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/private:utils",
        "@aspect_bazel_lib//lib:tar",
    ],
)
